# ralph-wiggum-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/ralph-app/: Cargo.toml
crates/ralph-app/src/: cli.rs  cmd_clear.rs  cmd_run.rs  cmd_status.rs  cmd_stop.rs  cmd_version.rs  main.rs
crates/ralph-claude/: Cargo.toml
crates/ralph-claude/src/: behavior.rs  lib.rs  loop_state.rs  parser.rs  plugin.rs  plugin_catalog.rs  plugin_components.rs  plugin_summary.rs  plugin_workspace.rs  runner.rs  stream.rs
crates/ralph-cli/: Cargo.toml
crates/ralph-cli/src/: cli_mapper.rs  config.rs  exec.rs  exec_new_loop.txt  exec_streaming.rs  lib.rs  loop_runner.rs  registry.rs  validation.rs
crates/ralph-codex/: Cargo.toml
crates/ralph-codex/src/: behavior.rs  lib.rs  parser.rs  plugin.rs  prompt.rs  runner.rs
crates/ralph-core/: Cargo.toml
crates/ralph-core/src/: completion.rs  event.rs  lib.rs  options.rs  plugin.rs  progress.rs  render.rs  state.rs  status.rs  types.rs  utils.rs
crates/ralph-opencode/: Cargo.toml
crates/ralph-opencode/crates/ralph-opencode/src/: plugin_components.rs
crates/ralph-opencode/src/: behavior.rs  lib.rs  loop_state.rs  parser.rs  plugin.rs  plugin_catalog.rs  plugin_components.rs  plugin_summary.rs  plugin_workspace.rs  prompt.rs  runner.rs  stream.rs
crates/ralph-ratatui-ext/: Cargo.toml
crates/ralph-ratatui-ext/src/: event_loop.rs  json_parser.rs  lib.rs  stream_reader.rs
crates/ralph-tui/: Cargo.toml
crates/ralph-tui/src/: handle_input_new.txt  lib.rs  status_bar.rs  tui.rs
src/: agent.rs  codex_json.rs  completion.rs  lib.rs  main.rs  state.rs  tui.rs  utils.rs
tests/: integration.rs
