[workspace]
members = [
    "crates/ralph-core",
    "crates/ralph-codex",
    "crates/ralph-claude",
    "crates/ralph-opencode",
    "crates/ralph-tui",
    "crates/ralph-cli",
    "crates/ralph-app",
    "crates/ralph-ratatui-ext",
]
resolver = "2"

[workspace.package]
version = "1.3.1"
edition = "2024"
authors = ["AnNingUI"]
license = "MIT"
repository = "https://github.com/AnNingUI/ralph-wiggum-rs"

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
regex = "1.11"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.1"
crossterm = "0.28.1"
ratatui = "0.29.0"
clap = { version = "4.5", features = ["derive", "cargo"] }

# internal
ralph-core = { path = "crates/ralph-core" }
ralph-codex = { path = "crates/ralph-codex" }
ralph-claude = { path = "crates/ralph-claude" }
ralph-opencode = { path = "crates/ralph-opencode" }
ralph-tui = { path = "crates/ralph-tui" }
ralph-cli = { path = "crates/ralph-cli" }
ralph-ratatui-ext = { path = "crates/ralph-ratatui-ext" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
