[package]
name = "ralph-app"
description = "Binary entry point for ralph-wiggum CLI application"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ralph-rs"
path = "src/main.rs"

[dependencies]
ralph-core = { workspace = true, features = ["clap"] }
ralph-codex = { workspace = true }
ralph-claude = { workspace = true }
ralph-tui = { workspace = true }
ralph-cli = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
chrono = { workspace = true }
