[package]
name = "ralph-ratatui-ext"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Ratatui extensions for async streaming and non-blocking rendering"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
